<resources>
    <string name="app_name">Проблемы Москвы</string>

    <string name="string_title_hint">Введите название проблемы</string>
    <string name="string_title_text">Название</string>
    <string name="string_details_text">Подробности</string>
    <string name="string_solved_text">Решена</string>


    <string name="string_new_problem_text">Новая проблема</string>
    <string name="string_when_empty_list_with_problems">Нет проблем! Круто! Но если они появились, то добавьте их в список</string>
    <string name="string_button_when_empty_list_with_problems">Добавить новую проблему</string>

    <string name="string_button_choose_executor">Выбрать исполнителя</string>
    <string name="string_button_send_report">Отправить отчёт</string>

    <string name="string_full_report">%1$s!
      Данная проблема была зарегистрирована %2$s. %3$s и %4$s    </string>

    <string name="string_problem_report_solved">Проблема решена</string>
    <string name="string_problem_report_unsolved">Проблема не решена</string>
    <string name="string_problem_report_no_executor">исполнитель не назначен.</string>
    <string name="string_problem_report_have_executor">исполнитель - %s.</string>
    <string name="string_problem_report_app_name">Название приложения и отчёт</string>
    <string name="string_send_report_for">Отправить отчёт с помощью</string>


</resources>