<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/id_imageview_problem_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black"/>

            <ImageButton
                android:id="@+id/id_button_take_a_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_title_text"
                android:textSize="20sp"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/id_edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_title_hint"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:inputType="text"/>

        </LinearLayout>


    </LinearLayout>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_details_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/id_button_with_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/id_checkbox_problem_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_solved_text" />

    <Button
        android:id="@+id/id_button_pick_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выбрать время" />

    <Button
        android:id="@+id/id_button_choose_executor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_button_choose_executor"
        app:backgroundTint="@null"/>

    <Button
        android:id="@+id/id_button_send_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_button_send_report"
        app:backgroundTint="@color/red"/>

</LinearLayout>